<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233148"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1B1F29"
        android:padding="15sp"
        android:text="@string/tarTitle"
        android:textAlignment="center"
        android:textColor="#4F9AFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/tarDes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calTar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/goal"
                android:src="@drawable/fork" />

            <EditText
                android:id="@+id/setTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:inputType="phone"
                android:text="1500"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tarButton"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:backgroundTint="#FFAB00"
            android:onClick="updateTarget"
            android:text="@string/chgTar"
            android:textColor="@color/black"
            app:cornerRadius="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:background="@drawable/button"
        android:text="@string/logOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>