<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233148"
    tools:context=".log.AddFoodOptionFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/addFood"
        android:textColor="#4F9AFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="#1C1E29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/usingCam"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:drawableTop="@drawable/scan"
                android:paddingVertical="35dp"
                android:textColor="@color/white"
                android:backgroundTint="#151724"
                app:cornerRadius="20sp"
                android:text="@string/usingCam" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manually"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/white"
                android:drawableTop="@drawable/write"
                app:iconGravity="textStart"
                android:paddingVertical="35dp"
                android:backgroundTint="#151724"
                app:cornerRadius="20sp"
                android:text="@string/manually" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/usingVoice"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:drawableTop="@drawable/voice"
                android:paddingVertical="35dp"
                android:textColor="@color/white"
                android:backgroundTint="#151724"
                app:cornerRadius="20sp"
                android:text="@string/usingMic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>